--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ body {
   background-image: url(/images/bg.jpg);
   color: white;
   margin: 0;
-  padding: 2rem 10rem;
+  height: 100vh;
+  padding: 1rem 15rem;
 }
 
 #title,
@@ -12,17 +13,54 @@ body {
   margin-top: 0;
 }
 
+#description {
+  font-size: larger;
+}
+
 #survey-form {
   background-color: rgb(20, 20, 150, 50%);
+  padding: 2rem;
+  font-size: larger;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="number"],
-select {
+select,
+textarea {
   display: block;
+  width: 100%;
+  min-height: 2rem;
+  margin: 1rem 0;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  font-size: large;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+  height: 1.5rem;
+  width: 1.5rem;
+  vertical-align: middle;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+textarea {
+  width: 100%;
 }
 
 #submit {
   display: block;
+  width: 100%;
+  background-color: green;
+  border-style: none;
+  color: white;
+  font-size: larger;
+  min-height: 3rem;
+  cursor: pointer;
+}
+
+#submit:active {
+  background-color: gray;
 }
